# session-types

./: --emit-locals  .gitignore  README.md  automaton_output.txt  dune  dune-project  print_automaton.ml  stc.opam
.github/workflows/: ci.yml
_build/: .db  .digest-db  log
_build/default/: README.md  stc.dune-package  stc.install  stc.opam
case studies/global/: Gc.global  Gcf_3.global  Gcf_5.global  Gmf1 copy.global  Gmf2.global  Gmf3.global  Gmf4.global  Gmf5.global  Gmf6.global  Gmf7.global  Gnest.global  Gpar.global  example1.global  example4.global  example5.global  example6.global  example7.global  example8.global  example9.global
case_study_exe/: dune
examples/: dawit.global  test_balance.global  voting.global
examples/book_quote/: b1.st  b2.st  s.st
src/: alpha_equiv.ml  ast.ml  ast.mli  automaton.ml  automaton_to_global.ml  automaton_to_local.ml  balance.ml  connected.ml  dune  encode.ml  inductive.ml  lexer.mll  live.ml  live_checker.ml  local_automaton.ml  local_automaton.mli  local_simulation.ml  main.ml  mask.ml  normalise.ml  parser.mly  pretty.ml  projection.ml  projection_strict.ml  reachable.ml  size.ml  synth.ml  synthesis.ml  synthesis_alg.ml  synthesiser.ml  well_formed.ml
test/: automaton_tests.ml  automaton_to_global_tests.ml  automaton_to_local_tests.ml  balance_tests.ml  connected_tests.ml  dune  encode_tests.ml  global_msg_tests.ml  live_tests.ml  local_automaton_tests.ml  local_type_tests.ml  projection_tests.ml  synthesis_tests.ml  synthesiser_tests.ml  test_helpers.ml  tests.ml  well_formedness_tests.ml
test_recursive_temp/: q.st
(+181 files in other folders)
